# flashout

./: .env-example  .env.save  .gitignore  Cargo.toml  Makefile  README.md  runner.sh
src/: main.rs
src/bot/: account.rs  args.rs  init.rs  login.rs  mod.rs
src/utils/: browser.rs  counter.rs  mod.rs  screenshot.rs
