[package]
name = "flashout"
version = "0.1.0"
edition = "2021"
authors = ["Mbithi"]
repository = "https://github.com/rotleaf/flashout"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
dotenv = "0.15.0"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
strip = true